# jobposting_scrapping

./: README.md  main.py  pyproject.toml  requirements.txt
app/: job_page.py  login.py  scrap.py
output/: scraping_output.csv
