[tool.poetry]
name = "linkedin-job-applicant-scrapper"
version = "0.1.0"
description = ""
authors = ["Prasanth Thiagarajan <prasanth33460@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.10.0"
selenium = "4.1.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
